app/assets/stylesheets/components/forms/_file_info.css.sass
.file-info
  position: relative
  height: 250px
  .center
    text-align: center
  .vcenter
    line-height: 250px
    p
      line-height: normal
      display: inline-block
  *[cf-thumbnail]
    +stretch
  .thumbnail
    vertical-align: middle
    cursor: pointer

  .file-preview,
  .file-metadata,
  .cf-file-drop,
  .file-progress,
  .no-file
    background-color: $gray-background
    border: 1px solid $light-gray
    +border-radius(3px)
    +stretch

  .file-preview
    +border-radius(3px 3px 3px 3px)
    +box-shadow(0 1px 2px rgba(0,0,0,0.1) inset)
    text-align: center
    .icon
      font-size: 100px
      line-height: 250px

  .file-metadata
    background-color: rgba(255, 255, 255, 0.8)
    padding: 10px
    th
      text-align: left
      padding-right: 1em

  .title-overlay
    opacity: 0
    position: absolute
    top: 15px
    left: 10px
    font-size: 20px

  .drag-me,
  .drop-me,
  .progress
    font-size: 25px
  .drop-me
    background-color: $lightest-gray
  .drag-me,
  .progress
    line-height: 200px
  .progress
    .cf-progress-bar
      margin: -70px 180px 0px

  .file-buttons
    +stretch(false, 10px, 10px, 10px)
    opacity: 0
    +transition(opacity 0.1s ease-in-out)
    &.center
      text-align: center
      opacity: 1
    .default-button
      text-align: center
      width: 40px
      margin: 0
      outline: none
    i
      position: relative
      top: 2px
    .upload-button
      width: auto
    i.ss-delete
      float: none
      margin: 0
      // override global css style for this button
      font-size: 12px
      color: $medium-gray
      +text-shadow(0 1px 0 rgba(255,255,255,0.6))


.file-info:hover
  .file-buttons
    opacity: 1
  .title-overlay
    opacity: 0.8

